# FinRobot

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  FINANCIALREPORTS_DATASOURCE.md  LICENSE  NOTICE  OAI_CONFIG_LIST  OAI_CONFIG_LIST_sample  PLAN.md  README.md  TRADEMARK_POLICY.md  agent_builder_demo.py  agent_fingpt_forecaster.py  config_api_keys  config_api_keys_sample  config_api_keys_sample.py  deploy.gcloud.sh  deploy.sh  finnhub_utils.py  finnlp_utils.py  finrobot_terminal_ui.py  multi_factor_agents.py  multimodal_agent_market_analyst.py  pyproject.toml  requirements-equity.txt  requirements.txt  run_web_app.py  setup.py  test_module.py  utils.py  visual_utils.py
.github/: PULL_REQUEST_TEMPLATE.md
New Template/: Template.ipynb
archive/experiments/: investment_group.py  portfolio_optimization.py
archive/tutorials_advanced/: agent_annual_report.ipynb
archive/tutorials_beginner/: agent_annual_report.ipynb  agent_fingpt_forecaster.ipynb  agent_rag_earnings_call_sec_filings.ipynb
coding/files/: cnbc_tesla.csv  yicai_maotai.csv
configs/: save_config_forecaster.json
docs/: agent-audit-provenance.md
experiments/: investment_group.json  investment_group.py  multi_factor_agents.py  portfolio_optimization.py  quantitative_investment_group_config.json
finrobot/: toolkit.py  toolkits.py  toolset.py  utils.py
finrobot/agents/: agent_library.py  data_agents.py  prompts.py  utils.py  workflow.py
finrobot/agents/experimental/: __init__.py  metaphysics.py
finrobot/data_source/: __init__.py  base.py  cache_utils.py  config.py  finance_data.py  finnhub_provider.py  finnhub_utils.py  finnlp_utils.py  fmp_provider.py  fmp_utils.py  reddit_utils.py  sec_utils.py  yfinance_utils.py
finrobot/data_source/earnings_calls_src/: __init__.py  earningsData.py  main_earningsData.py
finrobot/data_source/filings_src/: __init__.py  secData.py  sec_filings.py
finrobot/data_source/filings_src/prepline_sec_filings/: fetch.py  sec_document.py  sections.py
finrobot/data_source/marker_sec_src/: __init__.py  pdf_to_md.py  pdf_to_md_parallel.py  sec_filings_to_pdf.py
finrobot/data_source/tests/: __init__.py  conftest.py  test_base.py  test_config.py
finrobot/functional/: __init__.py  analyzer.py  business_model_utils.py  charting.py  coding.py  quantitative.py  rag.py  ragquery.py  reportlab.py  text.py  visual_utils.py
finrobot/modules/: __init__.py  sonification.py
finrobot_equity/: README.md  __init__.py
finrobot_equity/core/: requirements.txt
finrobot_equity/core/config/: config.ini.example
finrobot_equity/core/output/: ConocoPhillips (COP) - Equity Research Report.html  Meta (META) - Equity Research Report.html  Microsoft (MSFT) - Equity Research Report.html  NVDA_Equity_Research_Report.html  TSLA_Equity_Research_Report.html
finrobot_equity/core/src/: Run.ipynb  create_equity_report.py  generate_financial_analysis.py  generate_pdf_report.py
finrobot_equity/core/src/modules/: catalyst_analyzer.py  chart_generator.py  common_utils.py  enhanced_chart_generator.py  enhanced_text_generator.py  financial_data_processor.py  html_renderer.py  html_template_professional.py  market_data_api.py  news_integrator.py  pdf_generator.py  professional_pdf_report.py  report_data_loader.py  report_structure.py  retail_sentiment_client.py  sensitivity_analyzer.py  text_generator_agents.py  valuation_engine.py
finrobot_equity/core/src/modules/equity_agents/: __init__.py  agent_manager.py  company_overview_agent.py  competitor_analysis_agent.py  risks_agent.py  (+5 more)
finrobot_equity/core/tests/: test_generate_report.py  test_modules.py  test_retail_sentiment_client.py
finrobot_equity/web_app/: admin_routes.py  auth.py  main.py
finrobot_equity/web_app/data/: .gitkeep
finrobot_equity/web_app/database/: __init__.py  connection.py  crud.py  models.py
finrobot_equity/web_app/middleware/: __init__.py  request_logger.py
finrobot_equity/web_app/static/: style.css
finrobot_equity/web_app/templates/: index.html  login.html  parallel_dashboard.html
mi_patrimonio/: ai_advisor.py  config.py  config_portfolios.py  data_provider.py  finrobot_agents.py  portfolio.py  price_server.py
mi_patrimonio/core/: __init__.py  container.py  exceptions.py  logging.py
mi_patrimonio/sec_tools/: data_cache.py  xbrl_parser.py
mi_patrimonio/tests/: __init__.py  conftest.py  test_data_provider.py  test_exceptions.py  test_portfolio.py
plans/: feat-business-model-analyst-agent.md
tests/: output_analyze_revenue_model_AAPL_2024.txt  output_analyze_revenue_model_AAPL_2024_full.txt  test_analyze_revenue_model.py  test_business_model_analyst.py  test_coding_utils.py  test_fmp_utils.py
traces/: .env  agent_annual_report.py  agent_fingpt_forecaster.py  agent_fingpt_forecaster_logs.py  date.py  tracer_agent_rag.py  tracer_rag.py  tracing.py
tutorials/: agent_annual_report.ipynb  agent_backtrader.ipynb  agent_news_stream_advisor.ipynb  agent_trade_strategist.ipynb  fingpt_forecaster.ipynb  lmm_agent_mplfinance.ipynb  lmm_agent_opt_smacross.ipynb
tutorials_advanced/: agent_annual_report.ipynb  agent_fingpt_forecaster.ipynb  agent_openbb.ipynb  lmm_agent_mplfinance.ipynb
tutorials_beginner/: agent_annual_report.ipynb  agent_fingpt_forecaster.ipynb  agent_rag_qa.ipynb  agent_rag_qa_up.ipynb  ollama function call.ipynb  ollama stock chart.ipynb
vercel-patrimonio/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
vercel-patrimonio/__tests__/: errors.test.ts  riskAnalysis.test.ts  setup.ts  validation.test.ts
vercel-patrimonio/app/: page.tsx
vercel-patrimonio/app/api/chat/: route.ts
vercel-patrimonio/app/api/historical-metrics/: route.ts
vercel-patrimonio/app/api/prices/: route.ts
vercel-patrimonio/app/api/snapshot/: route.ts
vercel-patrimonio/components/: DashboardMulti.tsx  DistributionPieChart.tsx  RiskAnalysis.tsx
vercel-patrimonio/lib/: errors.ts  portfolioPositions.ts  riskAnalysis.ts  useLivePrices.ts  usePerformanceMetrics.ts  useRiskMetrics.ts  validation.ts
