[project]
name = "finrobot"
version = "0.1.5"
description = "FinRobot: An Open-Source AI Agent Platform for Financial Applications using LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AI4Finance Foundation", email = "contact@ai4finance.org" }
]
keywords = ["Financial", "Large Language Models", "AI Agents", "Portfolio Management"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.10, <3.12"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/AI4Finance-Foundation/FinRobot"
Repository = "https://github.com/AI4Finance-Foundation/FinRobot"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finrobot*", "mi_patrimonio*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# ============================================================================
# RUFF - Linting & Formatting
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".eggs",
    "build",
    "dist",
    "node_modules",
    "archive",
    "tutorials_beginner",
    "tutorials_advanced",
    "experiments",
    "vercel-finrobot",  # To be deleted
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "B008",   # function call in default argument
    "B905",   # zip without strict
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG", "PLR2004"]  # Allow unused args and magic values in tests
"**/tests/*" = ["ARG", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["finrobot", "mi_patrimonio"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# MYPY - Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Gradually enable strict mode
# Start with these directories, add more as we fix issues
exclude = [
    "tutorials_beginner",
    "tutorials_advanced",
    "experiments",
    "vercel-finrobot",
    "archive",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "finnhub.*",
    "yfinance.*",
    "pandas.*",
    "numpy.*",
    "openai.*",
    "autogen.*",
    "pyautogen.*",
    "langchain.*",
    "streamlit.*",
    "plotly.*",
    "matplotlib.*",
    "mplfinance.*",
    "backtrader.*",
    "praw.*",
    "sec_api.*",
    "reportlab.*",
    "PIL.*",
    "openbb.*",
    "requests.*",
    "aiohttp.*",
    "tenacity.*",
    "tqdm.*",
    "pydantic.*",
    "fastapi.*",
    "uvicorn.*",
    "schedule.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing
# ============================================================================
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "mi_patrimonio/tests",
    "finrobot/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
    "unit: marks unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["mi_patrimonio", "finrobot"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BLACK (backup formatter, prefer ruff format)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.eggs
    | build
    | dist
    | node_modules
    | archive
    | tutorials_beginner
    | tutorials_advanced
    | experiments
)/
'''
